NEW - # 90: Performanz Zeitreihendiagramm https://dev.bjoernsen.de/hydrology/ticket/90